--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,28 @@
 <resources>
-    <string name="app_name">FootballMatchViewer</string>
+    <string name="app_name">Football Match Viewer</string>
+
+    <string name="back">Back</string>
+
     <string name="error.no_internet.title">No internet connection</string>
     <string name="error.no_internet.description">Please check your internet connection and press the button to try again.</string>
     <string name="error.no_internet.cta">Retry</string>
     <string name="error.generic.title">Something went wrong</string>
     <string name="error.generic.description">We apologise for the error. Please try again later.</string>
     <string name="error.generic.cta">Retry</string>
+
+    <string name="screen.matches.title">Matches</string>
+    <string name="screen.matches.settings">Settings</string>
+    <string name="screen.matches.sort">Sort</string>
+    <string name="screen.terms.title">Terms and Conditions</string>
+
+    <string name="screen.settings.title">Settings</string>
+    <string name="screen.settings.theme">Theme</string>
+    <string name="screen.settings.theme.system">System</string>
+    <string name="screen.settings.theme.dark">Dark</string>
+    <string name="screen.settings.theme.light">Light</string>
+    <string name="screen.settings.language">Language</string>
+    <string name="screen.settings.language.en">English</string>
+    <string name="screen.settings.language.uk">Ukrainian</string>
+    <string name="screen.settings.language.pt">Portuguese</string>
+
 </resources>
